# ship-it-boardgame

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  render.py  requirements.txt  rules.md  schemas.drawio  table-top-simulator.md  Диаграмма без названия.drawio
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: shellcheck.yml  test.yml  tools.yml  validation.yml
ru/: README.md  card.drawio  cards.numbers  counts.numbers  faq.md  homebrew.md  promo-rules.numbers  rule-card.numbers  rules.md  schemas-info.yml  short-rules.numbers
ru/boosters/: soft_skills.numbers  stream.numbers  streaming.numbers
ru/graphics/: cover_dark_63_5x88_9.psd  cover_white_63_5x88_9.psd
ru/schema-sources/: atack1-1.drawio  atack1-2.drawio  atack1.drawio  card.drawio  cards.drawio  game-process.drawio  schemas.drawio
tools/: README.md  build.sh  generate-images-from-pdf.py  generate-pdf.py  pyproject.toml  tts-exporter.py  validate-cards.py  validate.sh
tools/ship_it_tools/: counts.py  meta.py
