[tool.poetry]
name = "ship-it-tools"
version = "0.0.1"
description = "Internal tools we use for the game development"
authors = ["sobolevn <mail@sobolevn.me>"]
license = "CC BY-NC-SA 4.0"
classifiers = [
  "Private :: Do not Upload",
]

[tool.poetry.dependencies]
python = "^3.11"

numbers-parser = "^4.12.1"
pypdfium2 = "^4.30.0"
pillow = "^10.4.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10"
types-pillow = "^10.2"


[tool.ruff]
line-length = 80
fix = true

[tool.ruff.lint]
select = ['F', 'I']
fixable = ['ALL']

[tool.ruff.lint.isort]
known-first-party = ["ship_it_tools"]


[tool.mypy]
strict = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
